background, chr sprite, basic physics for platforms

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Squash Hop</title>
     <script src="./lib/phaser.js"></script>
+    <script src="./src/prefabs/Blob.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Play.js"></script>
     <script src="./src/scenes/Credits.js"></script>
